publishing to DG MARE nexus
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@5307 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/pom.xml
+++ b/pom.xml
@@ -355,18 +355,17 @@
         </dependency> 
     </dependencies>
 
+    	
     <distributionManagement>
         <repository>
-            <id>hav.releases</id>
-            <name>HaV release repo</name>
-            <url>http://livm06p:9080/nexus/content/repositories/releases/</url>
-            <layout>default</layout>
+            <id>digit-releases</id>
+            <name>DG DIGIT Repository</name>
+            <url>https://webgate.ec.europa.eu/CITnet/nexus/content/repositories/mare/</url>
         </repository>
         <snapshotRepository>
-            <id>hav.snapshots</id>
-            <name>HaV release repo</name>
-            <url>http://livm06p:9080/nexus/content/repositories/snapshots/</url>
-            <layout>default</layout>
+            <id>digit-snapshots</id>
+            <name>DG DIGIT Snapshot Repository</name>
+            <url>https://webgate.ec.europa.eu/CITnet/nexus/content/repositories/mare-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
