--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <geotools.version>14-M1</geotools.version>
         <uvms.commons.version>1.4-SNAPSHOT</uvms.commons.version>
         <hibernate.validator.version>5.2.1.Final</hibernate.validator.version>
+        <usm4uvms.version>0.0.9-SNAPSHOT</usm4uvms.version>
     </properties>
 
     <dependencyManagement>
@@ -101,6 +102,12 @@
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct-processor</artifactId>
                 <version>${mapstruct.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>eu.europa.ec.mare.usm</groupId>
+                <artifactId>usm4uvms</artifactId>
+                <version>${usm4uvms.version}</version>
             </dependency>
 
             <dependency>
