Renaming Spatial model artifact to spatial-model in order to avoid overriding of the JAR files
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@5556 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -33,7 +33,7 @@
                         </ejbModule>
                         <ejbModule>
                             <groupId>${project.groupId}</groupId>
-                            <artifactId>model</artifactId>
+                            <artifactId>spatial-model</artifactId>
                         </ejbModule>
                         <webModule>
                             <groupId>${project.groupId}</groupId>
@@ -62,7 +62,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>model</artifactId>
+            <artifactId>spatial-model</artifactId>
             <version>${project.parent.version}</version>
             <type>ejb</type>
         </dependency>
