--- a/message/pom.xml
+++ b/message/pom.xml
@@ -65,7 +65,7 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>model</artifactId>
+            <artifactId>spatial-model</artifactId>
             <scope>provided</scope>
         </dependency>
 
