--- a/model/pom.xml
+++ b/model/pom.xml
@@ -4,7 +4,7 @@
         >
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>model</artifactId>
+    <artifactId>spatial-model</artifactId>
     <name>${project.parent.artifactId}-model</name>
     <packaging>ejb</packaging>
     <description>This module shall have interfaces, XSD, and DTOs</description>
