--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>model</artifactId>
+                <artifactId>spatial-model</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
 
