--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>model</artifactId>
+            <artifactId>spatial-model</artifactId>
             <scope>provided</scope>
         </dependency>
 
