--- a/service/pom.xml
+++ b/service/pom.xml
@@ -34,7 +34,7 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>model</artifactId>
+            <artifactId>spatial-model</artifactId>
             <scope>provided</scope>
         </dependency>
 
