--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -13,6 +13,18 @@
     </parent>
 
     <dependencies>
+    
+        <dependency>
+            <groupId>eu.europa.ec.mare.usm</groupId>
+            <artifactId>usm4uvms</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
+        
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>spatial-model</artifactId>
