--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,24 @@
         <geotools.version>14-M1</geotools.version>
         <uvms.commons.version>1.4-SNAPSHOT</uvms.commons.version>
         <hibernate.validator.version>5.2.1.Final</hibernate.validator.version>
-        <usm4uvms.version>0.0.9-SNAPSHOT</usm4uvms.version>
+        <usm4uvms.version>0.0.11-SNAPSHOT</usm4uvms.version>
     </properties>
 
     <dependencyManagement>
 
         <dependencies>
+        
+        	<dependency>
+                <groupId>eu.europa.ec.mare.usm</groupId>
+                <artifactId>usm4uvms</artifactId>
+                <version>${usm4uvms.version}</version>
+            </dependency>
+            
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>0.4</version>
+            </dependency>
 
             <dependency>
                 <groupId>eu.europa.ec.fisheries.uvms</groupId>
