fixing swagger REST documentations generation (modified also the REST security filters URL mapping)
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@6724 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -196,9 +196,8 @@
                                     <reportOutputDirectory>src/main/webapp</reportOutputDirectory>
                                     <useStandardDocletOptions>false</useStandardDocletOptions>
                                     <additionalparam>-apiVersion ${project.version}
-                                        -docBasePath http://${hostname}:${port}/${project.parent.artifactId}/apidocs
-                                        -apiBasePath http://${hostname}:${port}/${project.parent.artifactId}/rest
-                                    </additionalparam>
+                                        -docBasePath /${project.parent.artifactId}/apidocs
+                                        -apiBasePath /${project.parent.artifactId}/rest</additionalparam>
                                 </configuration>
                                 <goals>
                                     <goal>javadoc</goal>
