--- a/service/pom.xml
+++ b/service/pom.xml
@@ -133,6 +133,11 @@
         </dependency>
 
         <dependency>
+            <groupId>pl.pragmatists</groupId>
+            <artifactId>JUnitParams</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
         </dependency>
