Map Config service Update for Admin and User preference configuration
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@7118 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/service/src/main/resources/Config.json
+++ b/service/src/main/resources/Config.json
@@ -343,5 +343,65 @@
         "type": "print"
       }
     ]
+  },
+  "visibilitySettings": {
+    "positions": {
+      "popup": [
+        "fs",
+        "extMark",
+        "ircs",
+        "cfr",
+        "posTime",
+        "crs",
+        "c_spd",
+        "m_spd",
+        "stat",
+        "lat",
+        "lon",
+        "msg_tp",
+        "act_tp",
+        "source"
+      ],
+      "labels": [
+        "fs",
+        "extMark",
+        "ircs",
+        "cfr",
+        "posTime",
+        "lon",
+        "lat",
+        "stat",
+        "m_spd",
+        "c_spd",
+        "crs",
+        "msg_tp",
+        "act_tp",
+        "source"
+      ]
+    },
+    "segments": {
+      "popup": [
+        "fs",
+        "extMark",
+        "ircs",
+        "cfr",
+        "dist",
+        "dur",
+        "spd",
+        "crs",
+        "cat"
+      ],
+      "labels": [
+        "extMark",
+        "ircs",
+        "cfr",
+        "dist",
+        "cat",
+        "crs",
+        "spd",
+        "dur",
+        "fs"
+      ]
+    }
   }
 }
