Updated segment range
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@7160 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/service/src/main/resources/Config.json
+++ b/service/src/main/resources/Config.json
@@ -274,10 +274,10 @@
     "segments": {
       "attribute": "speedOverGround",
       "style": {
-        "9": "#d7191c",
         "0-2": "#1a9641",
-        "3-5": "#a6d96a",
-        "6-8": "#fdae61"
+        "2-5": "#a6d96a",
+        "5-8": "#fdae61",
+        "default": "#d7191c"
       }
     }
   },
