Updated MapConfig service
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@7240 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/service/src/main/resources/Config.json
+++ b/service/src/main/resources/Config.json
@@ -3,12 +3,12 @@
     "geoserverUrl": "http://localhost:8080/geoserver/"
   },
   "mapSettings": {
-    "mapProjection": 3857,
-    "displayProjection": 4326,
+    "mapProjectionId": 1,
+    "displayProjectionId": 2,
     "coordinatesFormat": "dd",
-    "scaleBarUnits": "metric",
+    "scaleBarUnits": "nautical",
     "refreshRate": 100,
-    "refreshState": true
+    "refreshStatus": true
   },
   "stylesSettings": {
     "positions": {
