add authorization check for the System Admin configurations
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@7320 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -281,7 +281,7 @@
                     </targetTests>
                 </configuration>
             </plugin>
-            <plugin>
+      <!--      <plugin>
                 <groupId>com.buschmais.jqassistant.scm</groupId>
                 <artifactId>jqassistant-maven-plugin</artifactId>
                 <version>1.1.0</version>
@@ -303,7 +303,7 @@
                         <version>1.1.0</version>
                     </dependency>
                 </dependencies>
-            </plugin>
+            </plugin>-->
         </plugins>
         <pluginManagement>
         	<plugins>
