--- a/service/src/main/resources/Config.json
+++ b/service/src/main/resources/Config.json
@@ -1,7 +1,4 @@
 {
-  "systemSettings": {
-    "geoserverUrl": "http://localhost:8080/geoserver/"
-  },
   "mapSettings": {
     "mapProjectionId": 1,
     "displayProjectionId": 2,
@@ -282,32 +279,44 @@
     }
   },
   "layerSettings": {
-    "overlayLayers": [
+    "portLayers": [
       {
-        "serviceLayerId": 4,
-        "type": "WMS"
-      },
+        "serviceLayerId": 4
+      }
+    ],
+    "areaLayers": {
+      "sysareas": [
+        {
+          "serviceLayerId": 1
+        },
+        {
+          "serviceLayerId": 2
+        }
+      ],
+      "userareas": {
+        "serviceLayerId": 5,
+        "areas": [
+          {}
+        ]
+      }
+    },
+    "additionalLayers": [
       {
-        "serviceLayerId": 1,
-        "type": "WMS"
-      },
-      {
-        "serviceLayerId": 2,
-        "type": "WMS"
-      },
-      {
-        "serviceLayerId": 7,
-        "type": "OSEA"
+        "serviceLayerId": 3
       }
     ],
     "baseLayers": [
       {
-        "serviceLayerId": 6,
-        "type": "OSM"
+        "serviceLayerId": 6
       },
       {
-        "serviceLayerId": 3,
-        "type": "WMS"
+        "serviceLayerId": 8
+      },
+      {
+        "serviceLayerId": 9
+      },
+      {
+        "serviceLayerId": 10
       }
     ]
   },
@@ -357,7 +366,8 @@
         "lon",
         "msg_tp",
         "act_tp",
-        "source"
+        "source",
+        "name"
       ],
       "labels": [
         "fs",
@@ -373,7 +383,25 @@
         "crs",
         "msg_tp",
         "act_tp",
-        "source"
+        "source",
+        "name"
+      ],
+      "table": [
+        "fs",
+        "extMark",
+        "ircs",
+        "cfr",
+        "posTime",
+        "lon",
+        "lat",
+        "stat",
+        "m_spd",
+        "c_spd",
+        "crs",
+        "msg_tp",
+        "act_tp",
+        "source",
+        "name"
       ]
     },
     "segments": {
@@ -386,7 +414,8 @@
         "dur",
         "spd",
         "crs",
-        "cat"
+        "cat",
+        "name"
       ],
       "labels": [
         "extMark",
@@ -397,7 +426,32 @@
         "crs",
         "spd",
         "dur",
-        "fs"
+        "fs",
+        "name"
+      ],
+      "table": [
+        "extMark",
+        "ircs",
+        "cfr",
+        "dist",
+        "cat",
+        "crs",
+        "spd",
+        "dur",
+        "fs",
+        "name"
+      ]
+    },
+    "tracks": {
+      "table": [
+        "fs",
+        "extMark",
+        "ircs",
+        "cfr",
+        "name",
+        "dist",
+        "dur",
+        "timeSea"
       ]
     }
   }
