--- a/service/pom.xml
+++ b/service/pom.xml
@@ -32,8 +32,8 @@
         </dependency>
         
         <dependency>
-            <groupId>eu.europa.ec.fisheries.uvms.vessel</groupId>
-            <artifactId>vessel-model</artifactId>
+            <groupId>eu.europa.ec.fisheries.uvms.asset</groupId>
+            <artifactId>asset-model</artifactId>
             <scope>provided</scope>
         </dependency>
 
