parametrizing the USM descriptor re-deployment flag
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@7777 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/service/src/main/resources/config.properties
+++ b/service/src/main/resources/config.properties
@@ -2,7 +2,4 @@
 module.name=spatial
 
 #USM related properties
-usm.deplyment.descriptor.force-update=true
-usm.rest.server=http://localhost:8080
-usm.admin.rest.username=usm_bootstrap
-usm.admin.rest.password=password
+usm.deplyment.descriptor.force-update=false
