introducing a system variable, which overrides the config.properties, regarding the Spatial USM autodeploy
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@7833 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/service/src/main/resources/config.properties
+++ b/service/src/main/resources/config.properties
@@ -2,4 +2,4 @@
 module.name=spatial
 
 #USM related properties
-usm.deplyment.descriptor.force-update=false
+usm_deplyment_descriptor_force_update=false
