add dev maven profile which replaces the config.properties property value
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/Modules/Spatial/APP@7836 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <uvms.commons.version>1.5-SNAPSHOT</uvms.commons.version>
         <hibernate.validator.version>5.2.1.Final</hibernate.validator.version>
         <usm4uvms.version>0.0.13-SNAPSHOT</usm4uvms.version>
+        <usm_deployment_descriptor_force_update>false</usm_deployment_descriptor_force_update>
     </properties>
 
     <dependencyManagement>
