--- a/service/src/main/resources/config.properties
+++ b/service/src/main/resources/config.properties
@@ -2,4 +2,4 @@
 module.name=spatial
 
 #USM related properties
-usm_deplyment_descriptor_force_update=false
+usm_deployment_descriptor_force_update=${usm_deployment_descriptor_force_update}
