preparing before release 1.0.0
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/tags/Spatial/Spatial-1.0.1a/APP@8796 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/pom.xml
+++ b/pom.xml
@@ -427,7 +427,7 @@
 
     <scm>
         <connection>
-            scm:svn:https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/releases/${release.branch.name}/Modules/TheModuleUrl
+            scm:svn:https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/releases/${release.branch.name}/Modules/Spatial/APP
         </connection>
     </scm>
 
