preparing before release 1.0.0
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/tags/Spatial/Spatial-1.0.1a/APP@8806 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>spatial-model</artifactId>
-            <version>${project.parent.version}</version>
+            <version>${spatial.model}</version>
             <type>ejb</type>
         </dependency>
         <dependency>
