--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -25,7 +25,7 @@
                 <db.driver>org.postgresql.Driver</db.driver>
                 <db.url>jdbc:postgresql://localhost:5432/uvms</db.url>
                 <db.user>spatial</db.user>
-                <db.passwd>postgres</db.passwd>
+                <db.passwd>spatial</db.passwd>
                 <db.defaultSchema>spatial</db.defaultSchema>
                 <db.changeLogFile>changelog/db-changelog-master.xml</db.changeLogFile>
                 <db.outputFile>changelog/generatedChangelog.xml</db.outputFile>
@@ -41,7 +41,7 @@
                 <db.driver>org.postgresql.Driver</db.driver>
                 <db.url>jdbc:postgresql://localhost:5432/uvms</db.url>
                 <db.user>spatial</db.user>
-                <db.passwd>postgres</db.passwd>
+                <db.passwd>spatial</db.passwd>
                 <db.defaultSchema>spatial</db.defaultSchema>
                 <db.changeLogFile>changelog/db-changelog-master.xml</db.changeLogFile>
             </properties>
@@ -56,7 +56,7 @@
                 <db.driver>org.postgresql.Driver</db.driver>
                 <db.url>jdbc:postgresql://localhost:5432/uvms</db.url>
                 <db.user>spatial</db.user>
-                <db.passwd>postgres</db.passwd>
+                <db.passwd>spatial</db.passwd>
                 <db.defaultSchema>spatial</db.defaultSchema>
                 <db.changeLogFile>changelog/db-changelog-master.xml</db.changeLogFile>
             </properties>
