--- a/APP/pom.xml
+++ b/APP/pom.xml
@@ -500,7 +500,7 @@
         <module>rest</module>
         <module>service</module>
         <module>message</module>
-
+        <module>model</module>
         <module>deploy</module>
     </modules>
 </project>
