--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
     </developers>
 
     <properties>
+        <!-- The spatial name is used as a common point to rename the application alias visible in USM-->
+        <spatial.name>Spatial</spatial.name>
         <spatial.model>1.0.3-SNAPSHOT</spatial.model>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -41,7 +43,7 @@
         <geotools.version>14-M1</geotools.version>
         <uvms.commons.version>1.6-SNAPSHOT</uvms.commons.version>
         <hibernate.validator.version>5.2.1.Final</hibernate.validator.version>
-        <usm4uvms.version>1.0.0</usm4uvms.version>
+        <usm4uvms.version>1.0.1-SNAPSHOT</usm4uvms.version>
         <usm_deployment_descriptor_force_update>false</usm_deployment_descriptor_force_update>
         <release.branch.name>uvms-1.0.0</release.branch.name>
     </properties>
