--- a/service/src/main/resources/config.properties
+++ b/service/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #this is dynamic because we need it in the ModuleInitializerBean and in the USM deployment descriptor
-module.name=spatial
+module.name=${spatial.name}
 
 #USM related properties
 usm_deployment_descriptor_force_update=${usm_deployment_descriptor_force_update}
