Removed duplicated dependency and fixed the package name
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/trunk/Modules/Spatial@9325 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/APP/service/pom.xml
+++ b/APP/service/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>eu.europa.ec.mare.usm</groupId>
+            <groupId>eu.europa.ec.fisheries.uvms</groupId>
             <artifactId>usm4uvms</artifactId>
         </dependency>
 
