--- a/APP/rest/pom.xml
+++ b/APP/rest/pom.xml
@@ -15,7 +15,7 @@
     <dependencies>
     
         <dependency>
-            <groupId>eu.europa.ec.mare.usm</groupId>
+            <groupId>eu.europa.ec.fisheries.uvms</groupId>
             <artifactId>usm4uvms</artifactId>
             <scope>provided</scope>
         </dependency>
