--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
             </dependency>
         
         	<dependency>
-                <groupId>eu.europa.ec.mare.usm</groupId>
+                <groupId>eu.europa.ec.fisheries.uvms</groupId>
                 <artifactId>usm4uvms</artifactId>
                 <version>${usm4uvms.version}</version>
             </dependency>
@@ -127,12 +127,6 @@
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct-processor</artifactId>
                 <version>${mapstruct.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>eu.europa.ec.mare.usm</groupId>
-                <artifactId>usm4uvms</artifactId>
-                <version>${usm4uvms.version}</version>
             </dependency>
 
             <dependency>
