--- a/service/pom.xml
+++ b/service/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>eu.europa.ec.mare.usm</groupId>
+            <groupId>eu.europa.ec.fisheries.uvms</groupId>
             <artifactId>usm4uvms</artifactId>
         </dependency>
 
