--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
 
     <modules>
         <module>APP</module>
+		<module>APP/model</module>
         <module>LIQUIBASE</module>
     </modules>
 </project>
