--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,8 @@
         <usm4uvms.version>1.0.1</usm4uvms.version>
         <usm_deployment_descriptor_force_update>false</usm_deployment_descriptor_force_update>
         <release.branch.name>uvms-1.0.0</release.branch.name>
+		<maven.release.plugin.version>2.5.2</maven.release.plugin.version>
+        <maven.scm.provider.version>2.1.1</maven.scm.provider.version>
     </properties>
 
     <dependencyManagement>
